.kubernetes/svc-cluster-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app-name svc-go-grpc-service-server
  namespace: test-b
  labels:
    app: *app-name
spec:
  clusterIP: None
  ports:
  - port: 50051
    targetPort: 50051
    protocol: TCP
  selector:
    app: go-grpc-service-server
