.kubernetes/svc-cluster-ip-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app-name svc-go-client-http-redirect
  namespace: test-b
  labels:
    app: *app-name
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: go-client-http-redirect
