.kubernetes/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-client-http-redirect
  namespace: test-b
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/permanent-redirect-code: "308"
    nginx.ingress.kubernetes.io/default-backend: "svc-go-client-http-redirect"
spec:
  ingressClassName: nginx
  rules:
    - host: grpc-client.architecture.caradhras.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-go-client-http-redirect
                port:
                  number: 3000
